Fri Dec 17, 1999  Jay 'Eraserhead' Felice <jasonf@nacs.net>
	* Added support for compiling with GTK+ but without Gnome.
	* Added BUGS file, gtk-5250.c
	* More robust autoconf support.

Wed Dec  1, 1999  Jay 'Eraserhead' Felice <jasonf@nacs.net>
	* Updated to compile with tn5250-0.15.3+ (API change from passing
	  display buffer to terminals to passing display to terminals).

Sat Nov 20, 1999  Jay 'Eraserhead' Felice <jasonf@nacs.net>
	* autoconf'd and automade
	* Better caching to bitmap (don't draw characters that haven't changed
	  since last draw).
	* Don't use a copied DBuffer as a cache, which saves lots of copies,
	  mallocs, frees, etc.
	* Implemented 'beep' terminal method.