@@ -48,10 +48,17 @@ static GnomeUIInfo main_menu[] = {
    GNOMEUIINFO_END
 };
 
-Tn5250Session *tnsess;
-Tn5250Terminal *tnterm;
-Tn5250Stream *tnstream;
-gchar *remotehost;
+Tn5250Session *sess = NULL;
+Tn5250Stream *stream = NULL;
+Tn5250Terminal *term = NULL;
+Tn5250Display *display = NULL;
+Tn5250Config *config = NULL;
+const char *tracefile = NULL;
+
+static void syntax (void)
+{
+  exit (1); /* FIXME: Implement. */
+}
 
 /*
  *    Program entry point.
@@ -59,48 +66,93 @@ gchar *remotehost;
 int main (int argc, char *argv[])
 {
    GtkWidget *app;
-   GtkWidget *term;
-
-   /* This is _really_ ugly, but I'm working on other things right now ... */
-   if(argc != 2)
-      {
-	 fprintf (stderr,"Ack! THPTHT!  Usage: gnome-5250 [telnet:]remotehost[:port]\n");
-	 return 255;
-      }
-   remotehost = argv[1];
+   GtkWidget *term_window;
 
    gnome_init ("gnome-5250", VERSION, argc, argv);
+
+   config = tn5250_config_new ();
+   if (tn5250_config_load_default (config) == -1)
+      {
+	 tn5250_config_unref (config);
+	 exit (1);
+      }
+   if (tn5250_config_parse_argv (config, argc, argv) == -1)
+      {
+	 tn5250_config_unref (config);
+	 syntax ();
+      }
+   if (tn5250_config_get (config, "help"))
+      syntax ();
+   else if (tn5250_config_get (config, "version"))
+      {
+	 g_print ("gnome-5250 %s\n", VERSION);
+	 exit (0);
+      }
 
    app = gnome_app_new ("gnome-5250", N_("Gnome 5250 Emulator"));
    gnome_app_create_menus (GNOME_APP (app), main_menu);
 
-   term = gtk5250_terminal_new ();
-   gnome_app_set_contents (GNOME_APP (app), term);
-   gtk_widget_show (term);
+   term_window = gtk5250_terminal_new ();
+   gnome_app_set_contents (GNOME_APP (app), term_window);
+   gtk_widget_show (term_window);
 
    gtk_signal_connect (GTK_OBJECT (app), "delete_event",
 	 GTK_SIGNAL_FUNC(file_exit_callback), NULL);
 
-   gtk_widget_show (app);
-
-   tn5250_settransmap("en"); /* FIXME: */
-
-   tnstream = tn5250_stream_open (remotehost);
-   if(tnstream == NULL)
+#ifndef NDEBUG
+   tracefile = tn5250_config_get (config, "trace");
+   if (tracefile != NULL)
+      tn5250_log_open (tracefile);
+#endif
+   
+   stream = tn5250_stream_open (tn5250_config_get (config, "host"));
+   if (stream == NULL)
+      return 255; /* FIXME: An error message would be nice. */
+   if (tn5250_stream_config (stream, config) == -1)
       return 255; /* FIXME: An error message would be nice. */
 
-   tnterm = gtk5250_terminal_get_impl(GTK5250_TERMINAL(term));
+   display = tn5250_display_new ();
+   if (display == NULL)
+     return 255; /* FIXME: Error Message. */
+   if (tn5250_display_config (display, config) == -1)
+      return 255; /* FIXME: An error message would be nice. */
 
-   tnsess = tn5250_session_new();
-   tn5250_session_set_terminal(tnsess, tnterm);
-   tn5250_stream_setenv(tnstream, "TERM", "IBM-3477-FC");
+   term = gtk5250_terminal_get_impl(GTK5250_TERMINAL(term_window));
+   if (term == NULL)
+      return 255; /* FIXME: An error message would be nice. */
+   if (tn5250_terminal_config (term, config) == -1)
+      return 255; /* FIXME: An error message would be nice. */
+#ifndef NDEBUG
+   /* Shrink-wrap the terminal with the debug terminal, if appropriate. */
+   {
+      const char *remotehost = tn5250_config_get (config, "host");
+      if (strlen (remotehost) >= 6
+	    && !memcmp (remotehost, "debug:", 6)) {
+	 Tn5250Terminal *dbgterm = tn5250_debug_terminal_new (term, stream);
+	 if (dbgterm == NULL) {
+	    tn5250_terminal_destroy (term);
+	    return 255; /* FIXME: Error message. */
+	 }
+	 term = dbgterm;
+	 if (tn5250_terminal_config (term, config) == -1)
+	   return 255; /* FIXME: Error message. */
+      }
+   }
+#endif
+   tn5250_terminal_init (term);
+   tn5250_display_set_terminal (display, term);
 
-   /* FIXME: Set DEVNAME */
+   sess = tn5250_session_new();
+   if (sess == NULL)
+     return 255; /* FIXME: Error message. */
+   tn5250_display_set_session (display, sess);
+   tn5250_session_set_stream (sess, stream);
+   term->conn_fd = tn5250_stream_socket_handle (stream);
+   if (tn5250_session_config (sess, config) == -1)
+      return 255; /* FIXME: An error message would be nice. */
 
-   tnterm->conn_fd = tn5250_stream_socket_handle(tnstream);
-   tn5250_session_set_stream(tnsess, tnstream);
-
-   tn5250_session_main_loop(tnsess);
+   gtk_widget_show (app);
+   tn5250_session_main_loop (sess);
    return 0;
 }
 
@@ -160,4 +212,4 @@ static void help_about_callback ()
    gtk_widget_show (dlg);
 }
 
-/* vi:set sts=3 sw=3: */
+/* vi:set ts=8 sts=2 sw=2 cindent cinoptions=^-2,p8,{.75s,f0,>4,n-2,:0: */
