@@ -14,3 +14,10 @@ Sat Nov 20, 1999  Jay 'Eraserhead' Felice <jasonf@nacs.net>
 	* Don't use a copied DBuffer as a cache, which saves lots of copies,
 	  mallocs, frees, etc.
 	* Implemented 'beep' terminal method.
+
+Fri May 05, 2000 Jay 'Eraserhead' Felice <jfelice@cronosys.com>
+	* Fixed up so it works with current version in CVS (0.15.8+)
+	* Fixed bug where it was drawing a space in the last attribute
+	  (instead of in the normal attribute) for the actual attribute
+	  character.
+	* Supplied dummy 'config' terminal method.
